--- a/app/src/main/res/layout/activity_hue.xml
+++ b/app/src/main/res/layout/activity_hue.xml
@@ -225,84 +225,79 @@
                         android:layout_weight="9">
 
                         <LinearLayout
-                            android:weightSum="100"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:orientation="horizontal">
 
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h1" />
 
                             <View
-                                android:id="@+id/view18"
-                                android:layout_width="0dp"
+                                android:layout_width="15dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h1"/>
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h2" />
 
                             <View
-                                android:layout_width="0dp"
+                                android:layout_width="15dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="0.8"/>
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h3" />
 
                             <View
-                                android:layout_width="0dp"
+                                android:layout_width="15dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h2"/>
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h4" />
 
                             <View
-                                android:layout_width="0dp"
+                                android:layout_width="15dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="0.8"/>
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h5" />
 
                             <View
-                                android:layout_width="0dp"
+                                android:layout_width="15dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h3"/>
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h6" />
 
                             <View
-                                android:layout_width="0dp"
+                                android:layout_width="15dp"
+                                android:layout_height="match_parent"/>
+
+                            <ImageView
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="0.8"/>
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/h7" />
 
                             <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h4"/>
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0.8"/>
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h5"/>
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0.8"/>
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h6"/>
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="0.8"/>
-
-                            <View
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="5"
-                                android:background="@drawable/h7"/>
+                                android:layout_width="40dp"
+                                android:layout_height="match_parent"/>
 
                         </LinearLayout>
                     </HorizontalScrollView>
@@ -320,12 +315,14 @@
         android:layout_height="match_parent"
         android:alpha="0.75"
         android:background="@color/black"
+        android:visibility="gone"
         tools:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:visibility="invisible"
         tools:layout_editor_absoluteX="40dp"
         tools:visibility="invisible">
 
