--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -179,8 +179,8 @@
             android:id="@+id/images"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.5
-    "
+            android:layout_weight="0.5"
+            android:layout_marginTop="8dp"
             android:orientation="horizontal">
 
             <View
