--- a/app/src/main/res/layout/activity_effect.xml
+++ b/app/src/main/res/layout/activity_effect.xml
@@ -24,6 +24,11 @@
             android:orientation="vertical">
 
 
+            <SeekBar
+                android:id="@+id/seekBar2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
             <View
                 android:id="@+id/view19"
                 android:layout_width="match_parent"
@@ -102,17 +107,41 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="5.1">
+            android:layout_weight="4.5">
 
             <ImageView
-                android:id="@+id/imageView16"
+                android:id="@+id/bird_original"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
                 app:srcCompat="@drawable/bird1" />
 
+            <ImageView
+                android:id="@+id/bird_painting"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:alpha="0"
+                app:srcCompat="@drawable/bird_paint" />
+
         </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.6"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:text="0" />
+        </LinearLayout>
 
 
         <LinearLayout
