--- a/app/src/main/res/layout/activity_effect.xml
+++ b/app/src/main/res/layout/activity_effect.xml
@@ -23,12 +23,6 @@
             android:background="@drawable/bg1"
             android:orientation="vertical">
 
-
-            <SeekBar
-                android:id="@+id/seekBar2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
             <View
                 android:id="@+id/view19"
                 android:layout_width="match_parent"
@@ -107,7 +101,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="4.5">
+            android:layout_weight="5.1">
 
             <ImageView
                 android:id="@+id/bird_original"
@@ -126,22 +120,64 @@
                 android:alpha="0"
                 app:srcCompat="@drawable/bird_paint" />
 
+            <LinearLayout
+                android:id="@+id/layout_levelBg"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="0.5"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="45dp"
+                android:layout_marginTop="460dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="10dp"
+                    android:text="Level"
+                    android:gravity="center"
+                    android:textColor="@color/thirdColor"/>
+
+                <View
+                    android:id="@+id/view18"
+                    android:layout_width="0dp"
+                    android:layout_height="3dp"
+                    android:layout_weight="5"
+                    android:background="@color/thirdColor"
+                    android:layout_gravity="center"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_levelBt"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_weight="0.5"
+                android:layout_marginStart="25dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="450dp"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_marginEnd="10dp"/>
+
+                <ImageView
+                    android:id="@+id/levelBar"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="5"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="250dp"
+                    android:src="@drawable/levelbar"/>
+
+            </LinearLayout>
+
         </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.6"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="0" />
-        </LinearLayout>
 
 
         <LinearLayout
