--- a/app/src/main/res/layout/activity_effect.xml
+++ b/app/src/main/res/layout/activity_effect.xml
@@ -210,19 +210,20 @@
                         android:id="@+id/imageView13"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="1.2"
                         app:srcCompat="@drawable/no" />
 
                     <TextView
                         android:id="@+id/textView5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="35dp"
                         android:layout_weight="3"
                         android:gravity="center"
                         android:text="Craft"
                         android:textAlignment="center"
                         android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="14sp" />
 
                     <TextView
@@ -235,6 +236,7 @@
                         android:text="Painting"
                         android:textAlignment="center"
                         android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="14sp" />
 
                     <TextView
@@ -247,6 +249,7 @@
                         android:text="Other"
                         android:textAlignment="center"
                         android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="14sp" />
                 </LinearLayout>
 
