--- a/app/src/main/res/layout/activity_hue.xml
+++ b/app/src/main/res/layout/activity_hue.xml
@@ -145,20 +145,21 @@
                         android:id="@+id/imageView13"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
+                        android:layout_weight="1.2"
                         app:srcCompat="@drawable/no" />
 
                     <TextView
                         android:id="@+id/textView5"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="40dp"
+                        android:layout_marginStart="35dp"
                         android:layout_weight="7.4"
                         android:gravity="center"
                         android:text="Monochromatic"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textView4"
@@ -170,7 +171,8 @@
                         android:text="Bicolor"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textView6"
@@ -182,7 +184,8 @@
                         android:text="Pleochroism"
                         android:textAlignment="center"
                         android:textColor="@color/black"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
 
                 <LinearLayout
