--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -6,13 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ScanActivity">
 
-    <LinearLayout
+    <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="150dp"
         android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:orientation="vertical"/>
+        android:layout_marginEnd="40dp" />
 
 
     <ImageView
