create and build the succeed page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="lightBackground">#F4F4F4</color>
     <color name="thirdColor">#FF000000</color>
     <color name="forthColor">#707070</color>
+    <color name="primaryColor">#F024F0</color>
 </resources>
