add function to camera button in Gallery page

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -80,6 +80,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="5dp"
+                android:onClick="onClickButtonTakePhoto"
                 app:srcCompat="@drawable/camera" />
         </LinearLayout>
 
