add changImage function to the bird image

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -122,7 +122,9 @@
                         android:layout_weight="1"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        app:srcCompat="@drawable/first_2" />
+                        android:tag="unChosen"
+                        android:onClick="changeImageState"
+                        android:src="@drawable/first_2"/>
 
                     <ImageView
                         android:layout_width="0dp"
