create function to change item's alpha and add the function to items

--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -85,6 +85,7 @@ want to make" />
         android:layout_marginEnd="28dp"
         android:alpha="1"
         android:tag="chosen"
+        android:onClick="changeBirdState"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +100,7 @@ want to make" />
         android:layout_marginEnd="270dp"
         android:alpha="1"
         android:tag="chosen"
+        android:onClick="changeBranch1State"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,6 +114,7 @@ want to make" />
         android:layout_marginStart="180dp"
         android:layout_marginBottom="280dp"
         android:alpha="1"
+        android:onClick="changeBranch2State"
         android:tag="chosen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
