create function to change item's visibility and add the function to a button

--- a/app/src/main/res/layout/activity_selection.xml
+++ b/app/src/main/res/layout/activity_selection.xml
@@ -63,11 +63,12 @@ want to make" />
                 android:layout_weight="3" />
 
             <ImageView
-                android:id="@+id/imageView10"
+                android:id="@+id/selectBt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:alpha="1"
+                android:visibility="visible"
                 app:srcCompat="@drawable/ok_w" />
 
         </LinearLayout>
